# Smart-Hospital-AI-Triage-Agent-System

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
src/api/: apis.cpp  apis.h  httpclient.cpp  httpclient.h
src/models/: datatypes.h
src/style/: theme.cpp  theme.h
src/views/: adminwidget.cpp  adminwidget.h  cswidget.cpp  cswidget.h  doctorwidget.cpp  doctorwidget.h  loginwidget.cpp  loginwidget.h  patientwidget.cpp  patientwidget.h
src/widgets/: chatbubble.cpp  chatbubble.h  loadingoverlay.cpp  loadingoverlay.h  toastwidget.cpp  toastwidget.h
web前端/: index.html  package-lock.json  package.json  vite.config.js
web前端/src/api/: index.js
web前端/src/router/: index.js
web前端/src/stores/: user.js
web前端/src/views/: LoginView.vue
web前端/src/views/admin/: AdminView.vue
web前端/src/views/cs/: CSView.vue
web前端/src/views/doctor/: DoctorView.vue
web前端/src/views/patient/: PatientView.vue
后端/HospitalServiceSystem/: pom.xml
后端/HospitalServiceSystem/src/main/java/com/studyback/hospitalservicesystem/: HospitalServiceSystemApplication.java
后端/HospitalServiceSystem/src/main/java/com/studyback/hospitalservicesystem/common/: PageResult.java  Result.java
后端/HospitalServiceSystem/src/main/java/com/studyback/hospitalservicesystem/config/: CorsConfig.java  DashScopeConfig.java  GlobalExceptionHandler.java  JacksonConfig.java  JwtAuthFilter.java  JwtUtil.java  Knife4jConfig.java  MyBatisPlusConfig.java
后端/HospitalServiceSystem/src/main/java/com/studyback/hospitalservicesystem/controller/: AgentController.java  AnnouncementController.java  AppointmentController.java  AuthController.java  ConversationController.java  DepartmentController.java  DoctorController.java  HumanAgentController.java  KnowledgeBaseController.java  MessageController.java  RatingController.java  UserController.java
后端/HospitalServiceSystem/src/main/java/com/studyback/hospitalservicesystem/dto/: AppointmentRequest.java  HumanServiceResult.java  (+6 more)
后端/HospitalServiceSystem/src/main/resources/: application.yml
后端/HospitalServiceSystem/src/main/resources/prompts/: generator-system-prompt.txt  planner-system-prompt.txt
后端/HospitalServiceSystem/src/test/java/com/studyback/hospitalservicesystem/: HospitalServiceSystemApplicationTests.java
数据库表/: announcement.sql  appointment.sql  conversation.sql  department.sql  doctor.sql  knowledge_base.sql  message.sql  rating.sql  user.sql  user_memory.sql
(+78 files in other folders)
